Fix the css shift for the project organizer typeahead

--- a/website/static/css/projectorganizer.css
+++ b/website/static/css/projectorganizer.css
@@ -297,6 +297,8 @@ height: 32px ;
 */
 .tt-hint {
     color: #999;
+    padding-top: 9px;
+    padding-left: 13px;
 }
 h3.category {
     font-size: 18px;
